// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dungeon renders DungeonAfterBattle component on battle victory state: DungeonAfterBattle 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h2>
        Stage 
        1
      </h2>
      <div>
        CharacterHeader
      </div>
      <div>
        DungeonAfterBattle
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders DungeonBeforeBattle component on encounter state: DungeonBeforeBattle 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h2>
        Stage 
        1
      </h2>
      <div>
        CharacterHeader
      </div>
      <div>
        DungeonBeforeBattle
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders DungeonInBattle component on battle state: DungeonInBattle 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <div>
        DungeonInBattle
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders DungeonLevelUp component on level up state: DungeonLevelUp 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
    >
      <div>
        CharacterHeader
      </div>
      <div>
        DungeonLevelUp
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders DungeonReward component on reward state: DungeonReward 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h2>
        Stage 
        1
      </h2>
      <div>
        CharacterHeader
      </div>
      <div>
        DungeonAfterBattle
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders without crashing: Dungeon 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h2>
        Stage 
        1
      </h2>
      <div>
        CharacterHeader
      </div>
      <div>
        DungeonBeforeBattle
      </div>
    </div>
  </div>
</body>
`;
